# michael_handwriting_project

./: .gitignore  README.md  app.ipynb  gradio.ipynb  handwriting_inference.ipynb  handwriting_recognition.ipynb  handwriting_training.ipynb  image_class.py  image_class_vgg.py  inference.ipynb  pyproject.toml  test.py  training.ipynb
old_scripts/: app.ipynb  handwriting_inference.py  handwriting_project.py  handwriting_training.ipynb  image_test.py  temp_consolidated.ipynb
src/: app.ipynb  data_analysis.ipynb  data_utils.py  inference.ipynb  inference_utils.py  models_util.py  training.ipynb  training_utils.py
src_old/: README.md  data.ipynb
