[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "handwriting_recognition_project"
version = "0.1.0"
description = "A project for handwritten character recognition with CNNs, VGG, and Gradio demos, based on a high school project."
authors = [
  { name = "AI Student (Originally a High School Project)", email = "user@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
    "Pillow>=8.0.0",
    "numpy>=1.19.0",
    "albumentations>=1.0.0",
    "gradio>=3.0.0", # Consider updating to a more specific recent version if known e.g., "gradio>=3.50,<4.0"
    "jupyterlab>=3.0.0",
    "scikit-learn" # Added for potential utility, though not explicitly in original scripts, it's very common. If not needed, can be removed.
    # IPython is usually a dependency of jupyterlab, but explicit can be added if needed.
]

[project.urls]
"Homepage" = "https://github.com/example/repository" # Placeholder
"Bug Tracker" = "https://github.com/example/repository/issues" # Placeholder

# Optional: If you want to make the scripts in old_scripts runnable as console scripts (less relevant now)
# [project.scripts]
# old_image_test = "old_scripts.image_test:main"
