[project]
name = "handwriting_recognition_project"
version = "0.1.0"
description = "A project for handwritten character recognition with CNNs, VGG, and Gradio demos, based on a high school project."
authors = [
  { name = "AI Student (Originally a High School Project)", email = "user@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
    "Pillow>=8.0.0",
    "numpy>=1.19.0",
    "albumentations>=1.0.0",
    "gradio>=3.0.0",
    "jupyterlab>=3.0.0",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/example/repository"
"Bug Tracker" = "https://github.com/example/repository/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = []  # Don't include any packages